# yorzoi

./: .gitignore  LICENSE.txt  README.md  demo.ipynb  pyproject.toml  setup.cfg  track_annotation.json  train_config.json
clex/: dataset.py  train.py  utils.py
clex/eval/: autoeval.py  utils.py
clex/eval/promoter/: Evaluation.ipynb  dataset.py  utils.py
clex/eval/scramble/: dataset.py  utils.py
clex/eval/terminator/: playground.ipynb  utils.py
clex/model/: borzoi.py
tests/: test_hello.py
yorzoi/: loss.py  train.py
yorzoi/eval/: autoeval.py  utils.py
yorzoi/eval/promoter/: DREAM_challenge.ipynb  dataset.py  utils.py
yorzoi/eval/scramble/: brooks_sample_correlations.csv  dataset.py  playground.ipynb  science.abg0162_table_s3.txt  utils.py
yorzoi/eval/scramble/bigwigs/: JS274_20190301_porechopped_filtered_canuCorrected_distinguished.minus.bw  JS274_20190301_porechopped_filtered_canuCorrected_distinguished.plus.bw  JS571_20190208_porechopped_filtered_canuCorrected_distinguished.minus.bw  JS571_20190208_porechopped_filtered_canuCorrected_distinguished.plus.bw  JS599_20190205_porechopped_filtered_canuCorrected_distinguished.minus.bw  JS599_20190205_porechopped_filtered_canuCorrected_distinguished.plus.bw  JS601_20190213_porechopped_filtered_canuCorrected_distinguished.minus.bw  JS601_20190213_porechopped_filtered_canuCorrected_distinguished.plus.bw  JS602_20190205_porechopped_filtered_canuCorrected_distinguished.minus.bw  JS602_20190205_porechopped_filtered_canuCorrected_distinguished.plus.bw  JS603_20190130_porechopped_filtered_canuCorrected_distinguished.minus.bw  JS603_20190130_porechopped_filtered_canuCorrected_distinguished.plus.bw  (+128 more)
yorzoi/eval/terminator/: utils.py
yorzoi/train_utils/: data.py  finetuning.py  model_factory.py  train.py
(+119 files in other folders)
