[metadata]
name = clex
version = 1.0
author = Timon Schneider
author_email = mail@timonschneider.de
description = Machine learning model that predicts RNA-seq coverage from DNA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tom-Ellis-Lab/clex-public
license_files = LICENSE.txt

[options]
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
include = clex